# nimo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  init.sh
agentpal-casebank/: README.md  pyproject.toml
agentpal-casebank/casebank/: __init__.py  cli.py  config.py  models.py
agentpal-casebank/casebank/cases/: __init__.py  candidate_builder.py  gold_manager.py
agentpal-casebank/casebank/collectors/: doctor.py  orchestrator.py  rest_puller.py  sse_client.py  ws_client.py
agentpal-casebank/casebank/eval/: gates.py  metrics.py  runner.py
agentpal-casebank/casebank/normalize/: __init__.py  normalizer.py
agentpal-casebank/casebank/reports/: markdown_report.py
agentpal-casebank/casebank/storage/: checkpoint.py  fs_store.py
agentpal-casebank/casebank/suites/: __init__.py  suite_loader.py
agentpal-casebank/examples/: gates.regression.json  suite.smoke.json
agentpal-casebank/tests/: test_candidate_builder.py  test_cli_doctor.py  test_gates.py  test_gold_manager.py  test_metrics.py  test_report.py  test_storage.py  test_suite_loader.py
backend/: Dockerfile  README.md  pyproject.toml
backend/agentpal/: __init__.py  config.py  database.py  main.py  paths.py
backend/agentpal/agents/: _llm_helpers.py  base.py  cron_agent.py  errors.py  message_bus.py  personal_assistant.py  registry.py  sandbox_agent.py  sub_agent.py
backend/agentpal/channels/: __init__.py  base.py  dingtalk.py  dingtalk_api.py  dingtalk_stream_worker.py  feishu.py  imessage.py
backend/agentpal/cli/: __init__.py  app.py  console.py  process.py  utils.py
backend/agentpal/memory/: __init__.py  base.py  buffer.py  factory.py  hybrid.py  mem0_adapter.py  reme_adapter.py  reme_light_adapter.py  sqlite.py
backend/agentpal/migrations/: __init__.py  migrate_memory.py
backend/agentpal/models/: __init__.py  agent.py  cron.py  llm_usage.py  memory.py  message.py  session.py  skill.py  tool.py
backend/agentpal/plans/: __init__.py  intent.py  prompts.py  store.py
backend/agentpal/providers/: __init__.py  manager.py  openai_provider.py  provider.py  retry_model.py
backend/agentpal/runtimes/: __init__.py  base.py  http.py  internal.py  registry.py
backend/agentpal/sandbox/: __init__.py  manager.py  tools.py
backend/agentpal/scheduler/: __init__.py  broker.py  client.py  config.py  process.py  scheduler.py  state.py  (+1 more)
backend/tests/: conftest.py
(+201 files in other folders)
