[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpal-casebank"
version = "0.1.0"
description = "Independent file-based case collection and evaluation sidecar for AgentPal"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
casebank = "casebank.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
