[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpal"
version = "0.1.0"
description = "Personal AI Assistant Platform built on AgentScope"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "assistant", "agentscope", "llm", "multi-channel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agentscope>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=23.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.7",
    "loguru>=0.7.0",
    "croniter>=2.0.0",
    # 渠道集成
    "dingtalk-sdk>=1.2.0",
    "lark-oapi>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
agentpal = "agentpal.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--tb=short", "-v"]

[tool.coverage.run]
source = ["agentpal"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
